# multi-agent-moderator-mcp

./: .gitignore  MANUAL_TEST_REPORT.md  README.md  REQUIREMENT.txt  pyproject.toml
docs/: README.md  glossary.md  gotchas.md  spec-v1.md
docs/adr/: 0001-record-architecture-decisions.md  0002-stdio-mcp-transport.md  0003-ssh-tmux-remote-mechanism.md  0004-json-file-state-with-file-locking.md  0005-additional-agents-routing-allowlist.md  0006-marker-protocol-text-tags.md  0007-moderator-writeback-protocol.md  0008-agent-lifecycle-states.md  0009-approval-queue-semantics.md  0010-marker-routing-edge-cases.md  0011-multi-moderator-v1-singularity.md  0012-state-file-not-encrypted.md  0013-marker-rate-handling.md  0014-state-schema-v1-reconciliation.md  0015-ssh-fingerprint-tofu.md  0016-schema-version-migrations.md  0017-no-auto-restart-on-offline.md
docs/tickets/: 01-project-skeleton.md  02-hello-agent-minimal.md  03-hello-agent-end-to-end.md  04-approval-roundtrip.md  05-peer-messaging.md  06-stuck-offline-no-autorestart.md  07-audit-rate-dedup.md  08-json-to-sqlite-migration.md  09-paramiko-ssh-driver.md  10-cue-tool.md  11-local-tmux-driver.md  12-ssh-connect-and-config.md  13-agent-cli-flag.md
src/moderator/: __init__.py  __main__.py  cli.py  runtime.py  serve.py
tests/: test_serve.py
tests/core/: test_lifecycle.py
tests/drivers/: test_local.py  test_ssh.py  test_ssh_config_resolution.py  test_tmux_remote.py
tests/markers/: test_parser.py
tests/state/: test_inspect.py  test_migrate.py  test_store.py
tests/tools/: test_approve.py  test_check_rendering.py  (+7 more)
(+25 files in other folders)
